# Remote

./: .gitignore  package-lock.json  package.json  run-local-services.js  vercel.json
agent/windows-agent/: Cargo.toml
agent/windows-agent/.cargo/: config.toml
agent/windows-agent/src/: capture.rs  clipboard.rs  connection.rs  input.rs  main.rs  sys_info.rs
apps/admin/: index.html  package.json  vite.config.ts
apps/admin/src/: App.tsx
apps/dashboard/: index.html  package.json  vite.config.ts
apps/dashboard/src/: App.tsx  index.css
apps/dashboard/src/components/: ShareScreen.tsx
apps/dashboard/src/store/: useStore.ts
apps/landing-page/: index.html  package.json  tsconfig.json
apps/landing-page/src/: App.tsx
deployment/docker/: docker-compose.yml
deployment/nginx/: nginx.conf
services/api/: Dockerfile  package.json
services/api/src/: index.ts
services/api/src/config/: db.ts
services/api/src/controllers/: auditLogController.ts  deviceController.ts  sessionController.ts  teamController.ts
services/api/src/middleware/: authMiddleware.ts
services/api/src/models/: AuditLog.ts  Device.ts  Invitation.ts  Session.ts  Subscription.ts  Team.ts
services/api/src/routes/: auditLogRoutes.ts  deviceRoutes.ts  sessionRoutes.ts  teamRoutes.ts
services/auth/: Dockerfile  package.json
services/auth/src/: index.ts
services/billing/: package.json
services/billing/src/: index.ts
services/notifications/: package.json
services/notifications/src/: index.ts
services/websocket/: Dockerfile  package.json
services/websocket/src/: index.ts
(+7 files in other folders)
