[package]
name = "windows-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "=1.36.0", features = ["full"] }
tokio-tungstenite = { version = "=0.21.0", default-features = false, features = ["handshake", "connect"] }
futures-util = "=0.3.31"
serde = { version = "=1.0.196", features = ["derive"] }
serde_json = "=1.0.113"
arboard = "=3.3.0"
url = "=2.5.0"
uuid = { version = "=1.7.0", features = ["v4"] }
local-ip-address = "=0.6.1"
parking_lot = "=0.12.1"
parking_lot_core = "=0.9.9"

[dependencies.windows]
version = "=0.48.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging"
]
